[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/maga.jpg" type="Texture" id=1]
[ext_resource path="res://test/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/explosion-3.png" type="Texture" id=4]

[sub_resource type="Animation" id=4]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "deadmeal",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 54.6443

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5, 31 )

[sub_resource type="CircleShape2D" id=2]
radius = 88.0511

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 128, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1152, 0, 128, 80 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.50001, -4.5 )
scale = Vector2( 0.08875, 0.08875 )
frames = SubResource( 3 )
animation = "deadmeal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 16 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( -1.5, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 0 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.29

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -0.999985, -55 )
scale = Vector2( 2.03125, 2.0125 )
frames = SubResource( 15 )

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
